# estimation

./: .gitmodules  CMakeLists.txt  Imu3dTest.cpp  LocalizationTest.cpp  README.md  package.xml
cmake/: MacroSubDirList.cmake
config/: ROSHardwareConfig.yaml  ROSconfig.yaml  config.yaml  configTester.yaml  netfil.txt  test_config.yaml  xavier.yaml
include/: Utils.h
include/StateEstimator/: Utils.h
include/StateEstimator/FactorGraph/: FactorGraphEstimator.h
include/StateEstimator/estimation/: Estimator.h
include/StateEstimator/estimation/FactorGraph/: FactorGraphEstimator.h
include/alphapilot/: Utils.h
include/alphapilot/estimation/: Estimator.h
include/alphapilot/estimation/FactorGraph/: FactorGraphEstimator.h
include/alphapilot_estimation/FactorGraph/: FactorGraphEstimator.h
include/state_estimator_factor_graph/: FactorGraphEstimator.h
include/utils/: FileUtils.hpp
launch/: aruco_detector.launch  factorGraphEstimator.launch
main/: CMakeLists.txt  Imu3dTest.cpp
main/FactorGraphEstimatorTester/: CMakeLists.txt  FactorGraphEstimatorTester.cpp
main/IMUFactorGraphEstimator/: CMakeLists.txt  Imu3dTest.cpp
main/SimpleStateFactorGraphEstimator/: CMakeLists.txt  LocalizationTest.cpp
msgs/: CMakeLists.txt
msgs/msg/: ArucoDetection.msg  ArucoDetections.msg  CameraDetection.msg  CameraDetections.msg  OptimizationStats.msg
src/FactorGraphEstimator/: CMakeLists.txt  FactorGraphEstimator.cpp
src/FactorGraphEstimatorLib/: CMakeLists.txt  FactorGraphEstimator.cpp
src/FactorGraphEstimatorNode/: CMakeLists.txt  FactorGraphEstimatorNode.cpp  FactorGraphEstimatorNode.h
src/state_estimator_factor_graph/: CMakeLists.txt  FactorGraphEstimator.cpp
tests/: CMakeLists.txt
tests/FactorGraph/: CMakeLists.txt  FactorGraphSimpleTests.cpp  autorally_test_config.h.in
